--- a/kissskia/kissskia.csproj
+++ b/kissskia/kissskia.csproj
@@ -15,7 +15,7 @@
     <WindowsAppSDKSelfContained>True</WindowsAppSDKSelfContained>
   </PropertyGroup>
   <ItemGroup>
-    <Page Remove="Themes\Generic.xaml" />
+    <None Remove="Themes\Generic.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,7 +29,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Graphics.Win2D" Version="1.2.0" />
     <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.106">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -50,12 +49,13 @@
     <ProjectCapability Include="Msix" />
   </ItemGroup>
   <ItemGroup>
-    <None Update="Themes\Generic.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </None>
+    <Folder Include="Library\EndianConvert\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Library\EndianConvert\" />
+    <Page Update="Themes\Generic.xaml">
+      <Generator></Generator>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Page>
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <WebView2EnableCsWinRTProjection>False</WebView2EnableCsWinRTProjection>
