--- a/HexBox.WinUI/HexBox.WinUI.csproj
+++ b/HexBox.WinUI/HexBox.WinUI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup Label="Globals">
     <WebView2EnableCsWinRTProjection>False</WebView2EnableCsWinRTProjection>
   </PropertyGroup>
@@ -9,7 +9,28 @@
     <RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
     <UseWinUI>true</UseWinUI>
     <SupportedOSPlatformVersion>10.0.19041.0</SupportedOSPlatformVersion>
+    <Authors>hotkidfamily</Authors>
+    <Version>0.1.0</Version>
+    <AssemblyName>HexBox.WinUI</AssemblyName>
+    <license>MIT</license>
+    <PackageProjectUrl>https://github.com/hotkidfamily/HexBox.WinUI</PackageProjectUrl>
+    <Title>HexBox On WinUI 3</Title>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Copyright>hotkidfamily@gmail.com</Copyright>
+    <Description>HexViewer on WinUI 3</Description>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.WinUI.Converters" Version="8.0.240109" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
