--- a/HexBox.WinUI/HexBox.WinUI.csproj
+++ b/HexBox.WinUI/HexBox.WinUI.csproj
@@ -3,14 +3,15 @@
     <WebView2EnableCsWinRTProjection>False</WebView2EnableCsWinRTProjection>
   </PropertyGroup>
   <PropertyGroup>
-    <TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
+    <TargetFrameworks>net8.0-windows10.0.19041.0;net6.0-windows10.0.19041.0</TargetFrameworks>
+    <LangVersion>12.0</LangVersion>
     <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     <RootNamespace>HexBox.WinUI</RootNamespace>
     <RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
     <UseWinUI>true</UseWinUI>
     <SupportedOSPlatformVersion>10.0.19041.0</SupportedOSPlatformVersion>
     <Authors>hotkidfamily</Authors>
-    <Version>0.1.6</Version>
+    <Version>0.1.7</Version>
     <AssemblyName>HexBox.WinUI</AssemblyName>
     <license>MIT</license>
     <PackageProjectUrl>https://github.com/hotkidfamily/HexBox.WinUI</PackageProjectUrl>
