--- a/HexBox.WinUI.Demo/HexBox.WinUI.Demo.csproj
+++ b/HexBox.WinUI.Demo/HexBox.WinUI.Demo.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
@@ -14,6 +14,14 @@
     <WindowsPackageType>None</WindowsPackageType>
     <WindowAppSdkSelfContainer>True</WindowAppSdkSelfContainer>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove="Strings\de\resources.resjson" />
+    <None Remove="Strings\en-US\resources.resjson" />
+    <None Remove="Strings\ja\resources.resjson" />
+    <None Remove="Strings\resources.resjson" />
+    <None Remove="Strings\zh-hans\resources.resjson" />
+    <None Remove="Strings\zh-hant\resources.resjson" />
+  </ItemGroup>
 
   <ItemGroup>
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -41,6 +49,14 @@
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.241114003" />
     <PackageReference Include="WinUIEx" Version="2.5.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <PRIResource Include="Strings\de\resources.resjson" />
+    <PRIResource Include="Strings\en-US\resources.resjson" />
+    <PRIResource Include="Strings\ja\resources.resjson" />
+    <PRIResource Include="Strings\resources.resjson" />
+    <PRIResource Include="Strings\zh-hans\resources.resjson" />
+    <PRIResource Include="Strings\zh-hant\resources.resjson" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HexBox.WinUI\HexBox.WinUI.csproj" />
