--- a/HexBox.WinUI/HexBox.WinUI.csproj
+++ b/HexBox.WinUI/HexBox.WinUI.csproj
@@ -23,6 +23,14 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Strings\de\resources.resjson" />
+    <None Remove="Strings\en-US\resources.resjson" />
+    <None Remove="Strings\ja\resources.resjson" />
+    <None Remove="Strings\resources.resjson" />
+    <None Remove="Strings\zh-hans\resources.resjson" />
+    <None Remove="Strings\zh-hant\resources.resjson" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="..\LICENSE">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
@@ -37,6 +45,14 @@
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.241114003" />
     <PackageReference Include="SkiaSharp.Views.WinUI" Version="2.88.9" />
+  </ItemGroup>
+  <ItemGroup>
+    <PRIResource Include="Strings\de\resources.resjson" />
+    <PRIResource Include="Strings\en-US\resources.resjson" />
+    <PRIResource Include="Strings\ja\resources.resjson" />
+    <PRIResource Include="Strings\resources.resjson" />
+    <PRIResource Include="Strings\zh-hans\resources.resjson" />
+    <PRIResource Include="Strings\zh-hant\resources.resjson" />
   </ItemGroup>
   
 </Project>
