--- a/HexBox.WinUI/HexBox.WinUI.csproj
+++ b/HexBox.WinUI/HexBox.WinUI.csproj
@@ -38,5 +38,20 @@
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.241114003" />
     <PackageReference Include="SkiaSharp.Views.WinUI" Version="2.88.9" />
   </ItemGroup>
+  <ItemGroup>
+    <Page Update="Themes\DefaultTheme.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Themes\DarkTheme.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Themes\LightTheme.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
   
 </Project>
