--- a/HexBox.WinUI.Demo/HexBox.WinUI.Demo.csproj
+++ b/HexBox.WinUI.Demo/HexBox.WinUI.Demo.csproj
@@ -79,6 +79,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <None Update="Assets\hexagons.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <WebView2EnableCsWinRTProjection>False</WebView2EnableCsWinRTProjection>
   </PropertyGroup>
@@ -99,5 +105,7 @@
     <PublishTrimmed Condition="'$(Configuration)' == 'Debug'">False</PublishTrimmed>
     <PublishTrimmed Condition="'$(Configuration)' != 'Debug'">False</PublishTrimmed>
     <SupportedOSPlatformVersion>10.0.19041.0</SupportedOSPlatformVersion>
+    <ApplicationIcon>Assets\hexagons.ico</ApplicationIcon>
+    <PackageIcon>hexagons.png</PackageIcon>
   </PropertyGroup>
 </Project>
